--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "git_user_id/git_repo_id",
+    "name": "gio-dev/belvo-api",
     "description": "",
     "keywords": [
         "swagger",
@@ -25,7 +25,6 @@
         "guzzlehttp/psr7": "^1.7 || ^2.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^8.0 || ^9.0",
         "friendsofphp/php-cs-fixer": "^3.5"
     },
     "autoload": {
